Launch material, and a README that had been contradicting itself for two screens
The hero was the easy part. The audit under it found the README telling teams
things that would cost them an afternoon:

  - The Requirements table - the canonical "what do I need" section - listed
    WPILib 2026.2.1, Phoenix 6 26.1.1, PhotonVision v2026.3.1, PathPlanner
    2026.1.2 and "Java 17+". Every row contradicted the badges four screens
    above, and a team scrolling to it installs the 2026 toolchain. It never
    mentioned Systemcore OS beta 14, which is the one pairing that bricks a
    deploy.
  - Two test counts, 440 apart: 427 in one section, 867 in the hero. A third,
    540, in the release notes. Now 867 everywhere, with a per-package breakdown
    that sums to exactly 867 and names only test classes that exist.
  - A vision sample calling addPhotonCamera(), removed in 2.0.0.
  - .fieldDimensions(16.54, 8.21) - the README was teaching the exact bug this
    release fixes.
  - PneumaticsModuleType.REVPH, which is REV_PH on 2027. Does not compile.
  - Nothing separating 2.x from 450 lines of 1.x release notes ending in "ready
    for the 2026 season... proven on a real robot". Skimmed under a 2.x heading
    that reads as a competition-readiness claim for something never driven.

Social cards for all three products, one family, each honest on its face: the
library card leads with "It has never been driven on a robot", the app card says
what it installs is a beta, the console card carries its three rules - it never
controls the robot, nothing it does may impede driving, it never invents a number.
Both SVG and a 1280x640 PNG, because GitHub's social preview upload rejects SVG.

The docs home page gains a feature section written for someone deciding whether
to spend an evening on this, with samples checked against the source.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>